Adding support for registration of kubernetes
clusters and fixing code smells

Change-Id: I2d10c263e255ca8644539de9c47c9a4fed04997f
Issue-ID: SO-4050
Signed-off-by: waqas.ikram <waqas.ikram@est.tech>